# modelb_JetsonNano

src/description_modelb/: CMakeLists.txt  package.xml
src/realsense_modelb/: CMakeLists.txt  package.xml
src/realsense_modelb/src/: copy_image_realsense  object_detection_realsense_2  object_detection_realsense_3
src/rviz/: tf_link.rviz
src/teleop_modelb/: CMakeLists.txt  package.xml
src/teleop_modelb/src/: autonomous_chair_teleop_key
src/test_motion/: CMakeLists.txt  package.xml
src/test_motion/src/: test_motion
