<?xml version="1.0"?>
<package format="2">
  <name>description_modelb</name>
  <version>1.0.0</version>
  <description>The description_modelb package</description>

  <maintainer email="irsyad.sahalan@utp.edu.my">caremnano2</maintainer>

  <license>BSD</license>

  <author email="irsyad.sahalan@utp.edu.my">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
